--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="My personnal Website Yacine Lyoubi"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
