--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,29 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="My personnal Website Yacine Lyoubi"
-    />
+
+        <!-- Primary Meta Tags -->
+    <title>Website | Yacine Lyoubi
+    Freelance Developer</title>
+    <meta name="title" content="Website | Yacine Lyoubi
+    Freelance Developer">
+    <meta name="description" content="My personnal Website Yacine Lyoubi">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yacine-lyoubi-psi-eosin.vercel.app/">
+    <meta property="og:title" content="Website | Yacine Lyoubi
+    Freelance Developer">
+    <meta property="og:description" content="My personnal Website Yacine Lyoubi">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yacine-lyoubi-psi-eosin.vercel.app/">
+    <meta property="twitter:title" content="Website | Yacine Lyoubi
+    Freelance Developer">
+    <meta property="twitter:description" content="My personnal Website Yacine Lyoubi">
+    <meta property="twitter:image" content="">
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 
