--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <meta property="twitter:image" content="">
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
 
 
     <!--
