add puzzle game, and test db connexion

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-        <!-- Primary Meta Tags -->
     <title>Website | Yacine Lyoubi
     Freelance Developer</title>
     <meta name="title" content="Website | Yacine Lyoubi
     Freelance Developer">
     <meta name="description" content="My personnal Website Yacine Lyoubi">
 
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yacine-lyoubi-psi-eosin.vercel.app/">
     <meta property="og:title" content="Website | Yacine Lyoubi
     Freelance Developer">
     <meta property="og:description" content="My personnal Website Yacine Lyoubi">
 
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yacine-lyoubi-psi-eosin.vercel.app/">
     <meta property="twitter:title" content="Website | Yacine Lyoubi
@@ -30,36 +27,54 @@
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script async src="https://cdn.splitbee.io/sb.js"></script>
-
-
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Website | Yacine Lyoubi</title>
   </head>
   <body>
+
+    
+<!--
+EN :
+
+Congrats, you found the second key to find the treasure
+key : FANTASY
+
+
+Step 2: Decrypt this ancient relic from a forgotten era.
+
+RU4gOgoKQ29uZ3JhdHMsIHlvdSBmb3VuZCB0aGUgdGhpcmQga2V5IHRvIGZpbmQgdGhlIHRyZWFzdXJlCmtleSA6IElOVFVJVElPTgoKIApzdGVwIDMgOiBDb250aW51ZS
+B5b3VyIGpvdXJuZXkgYnkgbGlzdGVuaW5nIHRvIHRoZSBjb25zb2xlJ3Mgd2hpc3BlcnMhIAoKLS1zdWNjZXNzLS0geW91J3ZlIHVubG9jayBhIGtleSBpdGVtOiAnMycg
+KHlvdSBtYXkgaGF2ZSB0byB1c2UgaXQgbGF0ZXIpCgoKRlIgOiAKCkbpbGljaXRhdGlvbnMsIHR1IGFzIHRyb3V26SBsYSB0cm9pc2nobWUgY2zpIHBvdXIgdHJvdXZlci
+BsZSB0culzb3IKY2zpIDogSU5UVUlUSU9OCgoKyXRhcGUgMyA6IENvbnRpbnVlIHRvbiB2b3lhZ2UgZW4g6WNvdXRhbnQgbGVzIG11cm11cmVzIGRlIGxhIGNvbnNvbGUh
+CgotLXN1Y2Pocy0tIHR1IGFzIGTpYmxvcXXpIHVuIG9iamV0IGNs6SA6ICczJyAodHUgcG91cnJhaXMgZGV2b2lyIGwndXRpbGlzZXIgcGx1cyB0YXJkKQ==
+
+Hint: I like the number 64
+
+Good luck!
+
+
+
+
+FR:
+
+Félicitations, tu as trouvé la deuxième clé pour trouver le trésor
+clé : FANTASY
+
+Étape 2: Déchiffre cette relique ancienne d'une époque oubliée.
+
+RU4gOgoKQ29uZ3JhdHMsIHlvdSBmb3VuZCB0aGUgdGhpcmQga2V5IHRvIGZpbmQgdGhlIHRyZWFzdXJlCmtleSA6IElOVFVJVElPTgoKIApzdGVwIDMgOiBDb250aW51ZS
+B5b3VyIGpvdXJuZXkgYnkgbGlzdGVuaW5nIHRvIHRoZSBjb25zb2xlJ3Mgd2hpc3BlcnMhIAoKLS1zdWNjZXNzLS0geW91J3ZlIHVubG9jayBhIGtleSBpdGVtOiAnMycg
+KHlvdSBtYXkgaGF2ZSB0byB1c2UgaXQgbGF0ZXIpCgoKRlIgOiAKCkbpbGljaXRhdGlvbnMsIHR1IGFzIHRyb3V26SBsYSB0cm9pc2nobWUgY2zpIHBvdXIgdHJvdXZlci
+BsZSB0culzb3IKY2zpIDogSU5UVUlUSU9OCgoKyXRhcGUgMyA6IENvbnRpbnVlIHRvbiB2b3lhZ2UgZW4g6WNvdXRhbnQgbGVzIG11cm11cmVzIGRlIGxhIGNvbnNvbGUh
+CgotLXN1Y2Pocy0tIHR1IGFzIGTpYmxvcXXpIHVuIG9iamV0IGNs6SA6ICczJyAodHUgcG91cnJhaXMgZGV2b2lyIGwndXRpbGlzZXIgcGx1cyB0YXJkKQ==
+
+Indice: J'aime le numéro 64
+
+Bonne chance!
+
+-->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
